--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,9 @@
 }
 
 .header {
+    font-family: 'Montserrat';
+    text-align: center;
+    color: white;
     align-self: center;
 
     &__skew {
@@ -31,6 +34,19 @@
         height: 110vh;
         width: 100vw;
         background-color: #00cb79;
+    }
+    h1 {
+        font-size: 36px;
+        font-weight: 500;
+        line-height: 44px;
+        
+    }
+    p {
+        color: rgba(255, 255, 255, 0.6);
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 19px;
+        width: 403px;
     }
 }
 
