styled input grid

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -62,24 +62,34 @@ grid-template-rows: 1fr 50px;
 
 &__inputs {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 27px);
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     align-items: center;
+
+    grid-row-gap: 120px;
+    margin-top: 66px;
+    margin-left: 83px;
+    margin-right: 83px;
+
+
 }
 
 }
 .input {
     display: grid;
+    grid-column-gap: 8px;
+    height: 47px;
     grid-template-columns: 26px 1fr;         
     font-family: 'Montserrat';
     text-align: center;
+    padding: 4px 0;
 
-
+    
     &__title{
         grid-column: 2/3;
         color: #b3b3b3;
-        border-top: 1px solid #b3b3b3;
+        
         font-size: 12px;
         font-weight: 300;
     }
@@ -89,8 +99,18 @@ grid-template-rows: 1fr 50px;
         text-align: center;
         font-size: 15px;
         font-weight: 600; 
-         
+        border-bottom: 1px solid #b3b3b3;
+        transition: all 3s ease;
+        
+        &:focus {
+            outline: none;
+            border-bottom: 1px solid #00cb79;   
+        }
+
     }
+
+    
+
     &__number{
         grid-column: 1/2;
         background-color: #00cb79;
@@ -98,5 +118,7 @@ grid-template-rows: 1fr 50px;
         font-size: 20px;
         padding-top: 3px;
         border-radius: 50%;
+        height: 26px;
+        width: 26px;
     }
 }
