--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -84,6 +84,8 @@ grid-template-rows: 1fr 50px;
         font-size: 22px;
         text-align: center;
         justify-self: center;
+
+        transform: translateY(50%);
     }
 
     button:focus {
@@ -98,7 +100,23 @@ grid-template-rows: 1fr 50px;
 
     &__clear {
         background-color: #45b0e5;
-       
+    }
+
+    &__content {
+        width: 1100px;
+        height: 297px;
+        background-color: #f2f2f2;
+
+        justify-self: center;
+        margin-bottom: 84px;
+
+        p {
+            line-height: 29px;
+            padding: 50px 47px;
+            font-family: 'Montserrat';
+            font-size: 16px;
+            font-weight: 300;
+        }
     }
 
 }
